<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dice">

    <fragment
        android:id="@+id/navigation_dice"
        android:name="com.github.sbischl.dice.ui.dice.DiceFragment"
        android:label="@string/title_dice"
        tools:layout="@layout/fragment_dice" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.github.sbischl.dice.ui.stat.StatFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.github.sbischl.dice.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
