<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/players_text"
        android:textColor="#000000"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:paddingTop="12dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/text_players_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/order_hint_text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_names_layout"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/button_startgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game_text"
        android:layout_gravity="center"/>

</LinearLayout>