<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_scrollview"
    android:fillViewport="true"
    android:paddingBottom="56dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/dice_settings_text"
            android:textColor="#000000"
            android:textSize="25sp"
            android:paddingBottom="3dp"/>

        <View
            android:layout_width="match_parent"
            android:paddingTop="12dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/number_of_dices_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/select_number_dices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/number_of_sides_per_dice_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/select_number_sides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/OtherSettingsHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/app_settings_text"
            android:textColor="#000000"
            android:textSize="25sp"
            android:paddingBottom="3dp"/>

        <View
            android:layout_width="match_parent"
            android:paddingTop="12dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/textRollDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/delay_text"
            android:textSize="20sp" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editRollDelay"
                android:gravity="center_horizontal"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="ms"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/keepDisplayOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keep_display_on_text"
                android:textColor="@android:color/tab_indicator_text"
                android:textSize="20sp" />
        </LinearLayout>







    </LinearLayout>
</ScrollView>